--- a/container_src/package.json
+++ b/container_src/package.json
@@ -1,10 +1,7 @@
 {
   "name": "container_src",
   "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
+  "dependencies": {
+    "ghostty-web": "latest"
   }
 }
