add remix, more features, really go off

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,13 +4,49 @@
  */
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "s3do",
-  "main": "src/index.ts",
+  "name": "cute-computer",
+  "main": "./worker/index.ts",
   "compatibility_date": "2025-10-08",
   "compatibility_flags": ["nodejs_compat"],
   "observability": {
     "enabled": true,
   },
+  "containers": [
+    {
+      "class_name": "AppContainer",
+      "image": "./Dockerfile",
+      "max_instances": 10,
+      "rollout_active_grace_period": 0,
+      "rollout_step_percentage": [100],
+    },
+  ],
+  "durable_objects": {
+    "bindings": [
+      {
+        "class_name": "AppContainer",
+        "name": "APP_CONTAINER",
+      },
+      {
+        "class_name": "S3",
+        "name": "S3",
+      },
+      {
+        "class_name": "Computers",
+        "name": "COMPUTERS",
+      },
+    ],
+  },
+  "migrations": [
+    {
+      "new_sqlite_classes": ["AppContainer", "S3"],
+      "tag": "v1",
+    },
+    {
+      "new_sqlite_classes": ["Computers"],
+      "tag": "v2",
+    },
+  ],
+  "upload_source_maps": true,
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -41,30 +77,4 @@
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
    */
   // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
-  "containers": [
-    {
-      "class_name": "AppContainer",
-      "image": "./Dockerfile",
-      "max_instances": 10,
-    },
-  ],
-  "durable_objects": {
-    "bindings": [
-      {
-        "class_name": "AppContainer",
-        "name": "APP_CONTAINER",
-      },
-      {
-        "class_name": "S3",
-        "name": "S3",
-      },
-    ],
-  },
-  "migrations": [
-    {
-      "new_sqlite_classes": ["AppContainer", "S3"],
-      "tag": "v1",
-    },
-  ],
-  "upload_source_maps": true,
 }
