--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "^25.0.1",
-    "typescript": "5.9.3",
+    "@aws-sdk/client-s3": "^3.954.0",
     "@cloudflare/vite-plugin": "^1.13.5",
+    "@cloudflare/vitest-pool-workers": "^0.11.0",
     "@react-router/dev": "^7.10.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/node": "^25.0.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@xmldom/xmldom": "^0.8.11",
     "tailwindcss": "^4.1.13",
+    "typescript": "5.9.3",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "~3.2.0",
     "wrangler": "^4.55.0"
   },
   "private": true,
