--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "c3do",
   "dependencies": {
     "@cloudflare/containers": "0.0.30",
+    "@monaco-editor/react": "^4.7.0",
     "@types/bun": "^1.3.4",
+    "@types/prismjs": "^1.26.5",
+    "codejar": "^4.3.0",
     "ghostty-web": "^0.4.0",
     "isbot": "^5.1.31",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
+    "react-arborist": "^3.4.3",
     "react-dom": "^19.1.1",
     "react-router": "^7.10.0",
     "unique-names-generator": "^4.7.1"
