--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "@cloudflare/containers": "0.0.30",
     "@monaco-editor/react": "^4.7.0",
     "@types/bun": "^1.3.4",
-    "@types/prismjs": "^1.26.5",
-    "codejar": "^4.3.0",
     "ghostty-web": "^0.4.0",
     "isbot": "^5.1.31",
-    "prismjs": "^1.30.0",
+    "jose": "^6.1.3",
     "react": "^19.1.1",
     "react-arborist": "^3.4.3",
     "react-dom": "^19.1.1",
