--- a/tsconfig.cloudflare.json
+++ b/tsconfig.cloudflare.json
@@ -6,14 +6,18 @@
     "app/**/.server/**/*",
     "app/**/.client/**/*",
     "worker/**/*",
-    "worker-configuration.d.ts"
+    "./worker-configuration.d.ts",
+    "tsconfig.test.json"
   ],
-  "exclude": ["worker/test/**/*"],
   "compilerOptions": {
     "composite": true,
     "strict": true,
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "types": ["vite/client"],
+    "types": [
+      "vite/client",
+      "@cloudflare/vitest-pool-workers",
+      "./worker-configuration.d.ts"
+    ],
     "target": "ES2022",
     "module": "ES2022",
     "moduleResolution": "bundler",
